# DGB-Quantum-Immune-Shield

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SECURITY_MODEL_v2.md  Shield_Architecture_v2.md  Shield_Testnet_Bundle_Guide_v2.md
docs/legacy/: Shield_Orchestrator_Design_v2.md
docs/v3/: API.md  ARCHITECTURE.md  CONTRACT.md  REASON_IDS.md
src/shield_orchestrator/: __init__.py  config.py  errors.py  pipeline.py
src/shield_orchestrator/bridges/: adaptive_core_bridge.py  adn_bridge.py  base_layer.py  dqsn_bridge.py  guardian_wallet_bridge.py  qwg_bridge.py  sentinel_bridge.py
src/shield_orchestrator/v3/: canonical_json.py  context_hash.py  orchestrate.py
src/shield_orchestrator/v3/contracts/: envelope.py  reason_ids.py  version.py
tests/: test_context_logging.py  test_full_pipeline_basic.py  test_tvaerror_str.py  test_v3_version_gate.py
