[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dgb-quantum-shield-orchestrator"
version = "3.0.0"
description = "Shield Contract v3 orchestrator for the DigiByte Quantum Shield (deterministic aggregation + routing, fail-closed)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DarekDGB" }]
keywords = ["digibyte", "security", "shield", "orchestrator", "pqc", "deterministic", "fail-closed"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["orchestrator*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["orchestrator"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90
